--- a/documentSimilarity_TfIdf.ipynb
+++ b/documentSimilarity_TfIdf.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,13 +343,13 @@
     "    \n",
     "    print('\\nInput Text:\\n {} \\n'.format(query_text))\n",
     "    for index, sim_text in enumerate(df_tweets.loc[top_tweet_Indices, \"Text\"]):\n",
-    "        print('*' * 30, 'Similar Text: {} || Similar Score: {}'.format(index+1, np.round(cosine_similarities_n[top_Indices[index]], 3)), '*' * 30, '\\n')\n",
+    "        print('=' * 30, 'Similar Text: {} || Similar Score: {}'.format(index+1, np.round(cosine_similarities_n[top_Indices[index]], 3)), '=' * 30, '\\n')\n",
     "        print(sim_text, '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -360,23 +360,23 @@
       "Input Text:\n",
       " @xoxjessiica I am sorry to hear this. It should appear on the next or following statement. To forward to our internal team on your behalf, DM account/card type only, full name and contact phone number already on profile. No PIN or account numbers. ^Deanna https://t.co/gvC4jAOA9c \n",
       "\n",
-      "****************************** Similar Text: 1 || Similar Score: 0.387 ****************************** \n",
+      "============================== Similar Text: 1 || Similar Score: 0.387 ============================== \n",
       "\n",
       "@conorFa16113956 We suggest deleting the previous public tweet and DM the full name, and contact phone number only that is already on profile. Email and Twitter are not secure banking communication channels. Do not DM any PIN or account numbers. ^Deanna https://t.co/gvC4jAOA9c \n",
       "\n",
-      "****************************** Similar Text: 2 || Similar Score: 0.345 ****************************** \n",
+      "============================== Similar Text: 2 || Similar Score: 0.345 ============================== \n",
       "\n",
       "@this_is_Manu Thanks for reaching out. We are here to help. Let us review this further. DM the account/card type only (checking, credit card, retail branded store card, etc) and country where it was open. Do not reply with any PIN or account numbers. ^Deanna https://t.co/gvC4jAOA9c \n",
       "\n",
-      "****************************** Similar Text: 3 || Similar Score: 0.338 ****************************** \n",
+      "============================== Similar Text: 3 || Similar Score: 0.338 ============================== \n",
       "\n",
       "@FlyinGaurav Due to COVID-19 impact causing higher volumes worldwide, please DM the concerns, account/card type only, and the country where it was open. Do not reply with any PIN or account numbers. ^Deanna https://t.co/gvC4jAOA9c \n",
       "\n",
-      "****************************** Similar Text: 4 || Similar Score: 0.317 ****************************** \n",
+      "============================== Similar Text: 4 || Similar Score: 0.317 ============================== \n",
       "\n",
       "@N66756195 We are here to help. Let us review this further. Please DM the details of your inquiry, account card type only, and country where it was open. Do not reply with any PIN or account numbers. ^Deanna https://t.co/gvC4jB6b0K \n",
       "\n",
-      "****************************** Similar Text: 5 || Similar Score: 0.292 ****************************** \n",
+      "============================== Similar Text: 5 || Similar Score: 0.292 ============================== \n",
       "\n",
       "@amri_anand Just following up since no response found. Feel free to DM us the details, account/card type, and country account was opened in if further help is needed. No PIN or account numbers. ^Deanna \n",
       "\n"
