--- a/documentSimilarity_BERT.ipynb
+++ b/documentSimilarity_BERT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "documentSimilarity_BERT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsI63IwtvOtEsRXxA+LxDj",
+      "authorship_tag": "ABX9TyP/ECv1oIro+zDHt5oloNk6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "HN2uyOrhG9i8",
         "colab_type": "code",
-        "outputId": "84822328-16d8-4a3e-8400-89ff2f5cf44f",
+        "outputId": "f8ec6751-c05d-42d6-dada-595e7b7b7166",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -55,7 +55,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n"
       ],
-      "execution_count": 100,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "s5gRJ2QCg8eG",
         "colab_type": "code",
-        "outputId": "f1b7de13-f72f-4a1b-ad87-b4740a77e4d2",
+        "outputId": "ea9884f9-5362-41f5-d047-985a5d9e76f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -93,7 +93,7 @@
         "\n",
         "device=torch.device('cuda')"
       ],
-      "execution_count": 101,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "3L9M0ACxIwYX",
         "colab_type": "code",
-        "outputId": "e7f05b3b-ed7d-4949-9233-281a93d96fe0",
+        "outputId": "3b86ae3c-b97b-452b-8ef2-84d6b476897b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -148,7 +148,7 @@
         "\n",
         "print(os.listdir(DRIVE_PATH))"
       ],
-      "execution_count": 38,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "yF_J22-1I-RR",
         "colab_type": "code",
-        "outputId": "f8c23741-89e8-467f-8e08-9c90e854ac56",
+        "outputId": "302b49c5-d55f-465a-8f0f-28094b7c23a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -180,7 +180,7 @@
         "df_tweets = pd.concat(df_list, ignore_index=True)\n",
         "df_tweets    "
       ],
-      "execution_count": 102,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 131
         }
       ]
     },
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "RR3S0KmLJvyA",
         "colab_type": "code",
-        "outputId": "a6168adb-b1b3-4d24-e53b-8ddb6e9aaf4c",
+        "outputId": "1b37ee32-f3c9-4cdf-e470-573e098278af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -357,7 +357,7 @@
         "df_tweets = df_tweets.reset_index(drop=True)\n",
         "df_tweets.shape"
       ],
-      "execution_count": 103,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +369,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 103
+          "execution_count": 132
         }
       ]
     },
@@ -378,7 +378,7 @@
       "metadata": {
         "id": "YodXojYDJ2O8",
         "colab_type": "code",
-        "outputId": "b8dc5e7f-273f-4a7e-ea5d-e8d225dd6c00",
+        "outputId": "a7e83c66-f365-4d57-b353-13898cc3effa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -389,7 +389,7 @@
         "df['text'] = df_tweets['Text']\n",
         "df.tail()"
       ],
-      "execution_count": 104,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +453,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 133
         }
       ]
     },
@@ -462,7 +462,7 @@
       "metadata": {
         "id": "S0q6wqLlJ5CS",
         "colab_type": "code",
-        "outputId": "32f4507a-e950-4bd9-cf7a-6a752c02a228",
+        "outputId": "a257e36f-715c-4820-ac04-9a7ae454c594",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -479,7 +479,7 @@
         "np.random.shuffle(total_indices_array)\n",
         "train_indices, test_indices = total_indices_array[:train_indices_size], total_indices_array[train_indices_size:]"
       ],
-      "execution_count": 105,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +497,7 @@
       "metadata": {
         "id": "HelsofoBJ9uD",
         "colab_type": "code",
-        "outputId": "12642817-600b-475d-85ca-837196d43914",
+        "outputId": "c8417a00-c82f-4dee-e5d0-810cc7e74e33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -507,7 +507,7 @@
         "train_set, test_set = df.loc[train_indices], df.loc[test_indices]\n",
         "train_set[:5]"
       ],
-      "execution_count": 106,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 106
+          "execution_count": 135
         }
       ]
     },
@@ -1562,7 +1562,7 @@
       },
       "source": [
         "def print_nearest_euclidean_texts(query_text, query_text_vector,  train_matrix, train_indices, df_tweets, n = 5):\n",
-        "    euclidean_distance = distance.cdist(sample_vector.reshape(1, -1), train_vectors, 'euclidean').flatten() \n",
+        "    euclidean_distance = distance.cdist(query_text_vector.reshape(1, -1), train_vectors, 'euclidean').flatten() \n",
         "    top_Indices = euclidean_distance.argsort()[:n]\n",
         "    top_tweet_Indices = train_indices[top_Indices]\n",
         "    \n",
@@ -1583,15 +1583,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 425
         },
-        "outputId": "e9959072-c7d7-41a8-cd95-3a5d2e4d7a70"
+        "outputId": "322f2158-1e73-401d-de16-1bd6c096c926"
       },
       "source": [
         "query_index = 16\n",
         "query_text = df_tweets.loc[test_indices[query_index], \"Text\"]\n",
-        "query_text_vector = test_vectors[query_index].reshape(1, -1)\n",
+        "query_text_vector = test_vectors[query_index]\n",
         "print_nearest_euclidean_texts(query_text, query_text_vector, train_vectors, train_indices, df_tweets, n = 5)"
       ],
-      "execution_count": 117,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
@@ -1600,25 +1600,25 @@
             "Input Text:\n",
             " coffee tastes so good at night🖤 \n",
             "\n",
-            "============================== Similar Text: 1 || Euclidean Distance: 3.701 ============================== \n",
+            "============================== Similar Text: 1 || Euclidean Distance: 4.793 ============================== \n",
             "\n",
-            "@PRDR123 Just following up with you. Do you still need assistance? ^B \n",
+            "I’ve been making my own iced coffee most days and its sooo good 😋 \n",
             "\n",
-            "============================== Similar Text: 2 || Euclidean Distance: 3.762 ============================== \n",
+            "============================== Similar Text: 2 || Euclidean Distance: 5.581 ============================== \n",
             "\n",
-            "@PRDR123 Hi Peter. Thank you for the feedback. Is there something I can help you with? ^B \n",
+            "my cake came out so fire 😭😭🤤🤤 \n",
             "\n",
-            "============================== Similar Text: 3 || Euclidean Distance: 3.8 ============================== \n",
+            "============================== Similar Text: 3 || Euclidean Distance: 5.676 ============================== \n",
             "\n",
-            "@PabloLlama88 Please try your call again at a later time. Thank you. ^B \n",
+            "I mean iced coffee sounds good too but the whipped cream from there 😋😋😋 \n",
             "\n",
-            "============================== Similar Text: 4 || Euclidean Distance: 3.886 ============================== \n",
+            "============================== Similar Text: 4 || Euclidean Distance: 5.685 ============================== \n",
             "\n",
-            "@mcsean123 Hi there! Are you available to chat? ^Vee \n",
+            "@Shithotish @Coffee_Ink_ Should be sat in my pair of acres😅 \n",
             "\n",
-            "============================== Similar Text: 5 || Euclidean Distance: 3.89 ============================== \n",
+            "============================== Similar Text: 5 || Euclidean Distance: 5.768 ============================== \n",
             "\n",
-            "@kgmerz Hi Karen. I would be happy to look into this. Do you have time to chat securely off Twitter so I can look at your account? ^B \n",
+            "Coffee ain’t hittin no more 😫 \n",
             "\n"
           ],
           "name": "stdout"
