--- a/documentSimilarity_TfIdf_v2.ipynb
+++ b/documentSimilarity_TfIdf_v2.ipynb
@@ -418,9 +418,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>original_theme</th>\n",
+       "      <th>similar_texts</th>\n",
+       "      <th>similar_scores</th>\n",
+       "      <th>top_similar_score</th>\n",
+       "      <th>similar_themes</th>\n",
+       "      <th>top_similar_themes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4648</th>\n",
+       "      <td>catnip coffee you dont have to give me a new ...</td>\n",
+       "      <td>coffee</td>\n",
+       "      <td>[Coffee https://t.co/Cp4Qq0K9Ad, love that i c...</td>\n",
+       "      <td>[0.235, 0.155, 0.141, 0.138, 0.137, 0.136, 0.1...</td>\n",
+       "      <td>0.235</td>\n",
+       "      <td>[coffee, coffee, coffee, dog, coffee, ramadan,...</td>\n",
+       "      <td>coffee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>candicontreras7 hello thank you for tweeting ...</td>\n",
+       "      <td>Bank/Financial</td>\n",
+       "      <td>[@LarkBACK Hello, thank you for tweeting us. S...</td>\n",
+       "      <td>[0.786, 0.785, 0.785, 0.783, 0.783, 0.782, 0.7...</td>\n",
+       "      <td>0.786</td>\n",
+       "      <td>[Bank/Financial, Bank/Financial, Bank/Financia...</td>\n",
+       "      <td>Bank/Financial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4645</th>\n",
+       "      <td>teekhi mirchh harriisqureshi lemme healuh maj...</td>\n",
+       "      <td>coffee</td>\n",
+       "      <td>[Coffee https://t.co/Cp4Qq0K9Ad, RT @NajeemHan...</td>\n",
+       "      <td>[0.24, 0.162, 0.149, 0.148, 0.14, 0.123, 0.113...</td>\n",
+       "      <td>0.240</td>\n",
+       "      <td>[coffee, ramadan, covid-19, Bank/Financial, co...</td>\n",
+       "      <td>coffee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2086</th>\n",
+       "      <td>rt trumpwarroom are you kidding me michigan de...</td>\n",
+       "      <td>covid-19</td>\n",
+       "      <td>[RT @JCAPoquoson: Punished for telling the tru...</td>\n",
+       "      <td>[0.618, 0.213, 0.149, 0.107, 0.097, 0.094, 0.0...</td>\n",
+       "      <td>0.618</td>\n",
+       "      <td>[covid-19, covid-19, covid-19, covid-19, nasa,...</td>\n",
+       "      <td>covid-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2988</th>\n",
+       "      <td>state rep whitsett nearly died from coronaviru...</td>\n",
+       "      <td>covid-19</td>\n",
+       "      <td>[RT @GOPChairwoman: State Rep. Whitsett nearly...</td>\n",
+       "      <td>[0.801, 0.065, 0.058, 0.057, 0.051, 0.049, 0.0...</td>\n",
+       "      <td>0.801</td>\n",
+       "      <td>[covid-19, covid-19, @Citi, covid-19, cake, ca...</td>\n",
+       "      <td>covid-19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  original_theme  \\\n",
+       "4648   catnip coffee you dont have to give me a new ...          coffee   \n",
+       "362    candicontreras7 hello thank you for tweeting ...  Bank/Financial   \n",
+       "4645   teekhi mirchh harriisqureshi lemme healuh maj...          coffee   \n",
+       "2086  rt trumpwarroom are you kidding me michigan de...        covid-19   \n",
+       "2988  state rep whitsett nearly died from coronaviru...        covid-19   \n",
+       "\n",
+       "                                          similar_texts  \\\n",
+       "4648  [Coffee https://t.co/Cp4Qq0K9Ad, love that i c...   \n",
+       "362   [@LarkBACK Hello, thank you for tweeting us. S...   \n",
+       "4645  [Coffee https://t.co/Cp4Qq0K9Ad, RT @NajeemHan...   \n",
+       "2086  [RT @JCAPoquoson: Punished for telling the tru...   \n",
+       "2988  [RT @GOPChairwoman: State Rep. Whitsett nearly...   \n",
+       "\n",
+       "                                         similar_scores  top_similar_score  \\\n",
+       "4648  [0.235, 0.155, 0.141, 0.138, 0.137, 0.136, 0.1...              0.235   \n",
+       "362   [0.786, 0.785, 0.785, 0.783, 0.783, 0.782, 0.7...              0.786   \n",
+       "4645  [0.24, 0.162, 0.149, 0.148, 0.14, 0.123, 0.113...              0.240   \n",
+       "2086  [0.618, 0.213, 0.149, 0.107, 0.097, 0.094, 0.0...              0.618   \n",
+       "2988  [0.801, 0.065, 0.058, 0.057, 0.051, 0.049, 0.0...              0.801   \n",
+       "\n",
+       "                                         similar_themes top_similar_themes  \n",
+       "4648  [coffee, coffee, coffee, dog, coffee, ramadan,...             coffee  \n",
+       "362   [Bank/Financial, Bank/Financial, Bank/Financia...     Bank/Financial  \n",
+       "4645  [coffee, ramadan, covid-19, Bank/Financial, co...             coffee  \n",
+       "2086  [covid-19, covid-19, covid-19, covid-19, nasa,...           covid-19  \n",
+       "2988  [covid-19, covid-19, @Citi, covid-19, cake, ca...           covid-19  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "similar_test_df = find_similar_n(tf_idf_train_matrix, train_indices, tf_idf_test_matrix, test_indices, test_set, df_tweets, n=20)\n",
     "similar_test_df.head()"
@@ -428,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on test data in predicting theme: 85.84%\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = 100 * np.sum(similar_test_df[\"original_theme\"] == similar_test_df[\"top_similar_themes\"])/similar_test_df.shape[0]\n",
     "print(\"Accuracy on test data in predicting theme: {}%\".format(np.round(accuracy,2)))"
@@ -438,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
