--- a/documentSimilarity_LSI_v1.ipynb
+++ b/documentSimilarity_LSI_v1.ipynb
@@ -337,9 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = \"I love espresso with coffee\"\n",
-    "vec_bow = dictionary.doc2bow(doc.lower().split())\n",
-    "vec_lsi = lsi[vec_bow]  # convert the query to LSI space"
+    "index = similarities.MatrixSimilarity(lsi[corpus])  # transform corpus to LSI space and index it"
    ]
   },
   {
@@ -348,17 +346,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = similarities.MatrixSimilarity(lsi[corpus])  # transform corpus to LSI space and index it"
+    "index.save('./tweets.index')\n",
+    "index = similarities.MatrixSimilarity.load('./tweets.index')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Input Text:\n",
+      " covid-19 pandemic \n",
+      "\n",
+      "============================== Similar Text: 1 || Similar Score: 0.8320000171661377 ============================== \n",
+      "\n",
+      "This #EarthDay feels different than others. We examine the other ways the pandemic has taken a toll on nature despite lower carbon emissions.  https://t.co/KkzyjIakoI \n",
+      "\n",
+      "============================== Similar Text: 2 || Similar Score: 0.6420000195503235 ============================== \n",
+      "\n",
+      "@hopd87 @Citibank The pandemic has challenged us all. We're trying our best to look out for clients and our employees. I appreciate your patience w/ our delayed response. Send a DM us with your account type/brand and the country it was opened. Never send acct numbers or PINs. ^Mike \n",
+      "\n",
+      "============================== Similar Text: 3 || Similar Score: 0.640999972820282 ============================== \n",
+      "\n",
+      "@FK1tten The pandemic has challenged us all. We're trying our best to look out for clients and our employees. I appreciate your patience w/ our delayed response. Send a DM us with your account type/brand and the country it was opened. Never send acct numbers or PINs. ^Mike \n",
+      "\n",
+      "============================== Similar Text: 4 || Similar Score: 0.6399999856948853 ============================== \n",
+      "\n",
+      "@Steve_Font The pandemic has challenged us all. We're trying our best to look out for clients and our employees. I appreciate your patience w/ our delayed response. Send a DM us with your account type/brand and the country it was opened. Never send acct numbers or PINs. ^Mike \n",
+      "\n",
+      "============================== Similar Text: 5 || Similar Score: 0.6399999856948853 ============================== \n",
+      "\n",
+      "@PRAVINKHANVILK8 The pandemic has challenged us all. We're trying our best to look out for clients and our employees. I appreciate your patience w/ our delayed response. Send a DM us with your account type/brand and the country it was opened. Never send acct numbers or PINs. ^Mike \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "index.save('./tweets.index')\n",
-    "index = similarities.MatrixSimilarity.load('./tweets.index')"
+    "# sanity check\n",
+    "n = 5\n",
+    "doc = \"covid-19 pandemic\"\n",
+    "vec_bow = dictionary.doc2bow(doc.lower().split())\n",
+    "vec_lsi = lsi[vec_bow]  # convert the query to LSI space\n",
+    "sims = index[vec_lsi]  # perform a similarity query against the corpus\n",
+    "top_Indices = sims.argsort()[::-1][:n]\n",
+    "top_tweet_Indices = train_indices[top_Indices]\n",
+    "\n",
+    "print('\\nInput Text:\\n {} \\n'.format(doc))\n",
+    "for i, sim_text in enumerate(df_tweets.loc[top_tweet_Indices, \"Text\"]):\n",
+    "        print('=' * 30, 'Similar Text: {} || Similar Score: {}'.format(i+1, np.round(sims[top_Indices[i]], 3)), '=' * 30, '\\n')\n",
+    "        print(sim_text, '\\n')"
    ]
   },
   {
@@ -382,14 +423,45 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Input Text:\n",
+      " Listened to the news in my car and sports news lasted 10 seconds. 🤣 \n",
+      "\n",
+      "============================== Similar Text: 1 || Similar Score: 0.7910000085830688 ============================== \n",
+      "\n",
+      "Jennifer Aniston shared the quarantine parody of the cute Friends theme song | Instant News https://t.co/geFZUQ9y0W https://t.co/05MlyEoI6h \n",
+      "\n",
+      "============================== Similar Text: 2 || Similar Score: 0.7369999885559082 ============================== \n",
+      "\n",
+      "@helvo6 The big car behind you🛣 \n",
+      "\n",
+      "============================== Similar Text: 3 || Similar Score: 0.718999981880188 ============================== \n",
+      "\n",
+      "Update he just put a car in neutral and drove it down the garage \n",
+      "\n",
+      "============================== Similar Text: 4 || Similar Score: 0.6489999890327454 ============================== \n",
+      "\n",
+      "I always wonder why my old car gave up on my ass, but than makayla reminds me how I use to dick it on a daily 😂😂😂 https://t.co/uHl6vYLmW7 \n",
+      "\n",
+      "============================== Similar Text: 5 || Similar Score: 0.6349999904632568 ============================== \n",
+      "\n",
+      "NO MORE bad news .. not on here or in DM’s or texts emails or phone. Not by FedX car bus train horse &amp; buggy or a sign in my yard. Not by TV newspaper Instagram FB Facetime radio or drones. In short don’t relay ANY bad news to ME.  BILLIONS of good things out there. FIND ONE \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "query_index = 40\n",
+    "query_index = 27\n",
     "query_text = df_tweets.loc[test_indices[query_index], \"Text\"]\n",
     "query_text_list = df.loc[test_indices[query_index], \"text\"]\n",
     "query_vec_bow = dictionary.doc2bow(query_text_list)\n",
     "query_text_vector = lsi[query_vec_bow] \n",
-    "#print_similar_texts(query_text, query_text_vector,  index, train_indices, df_tweets, n = 5)\n"
+    "print_similar_texts(query_text, query_text_vector,  index, train_indices, df_tweets, n = 5)"
    ]
   },
   {
@@ -573,7 +645,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test data in predicting theme: 87.66%\n"
+      "Accuracy on test data in predicting theme: 87.01%\n"
      ]
     }
    ],
