--- a/documentSimilarity_LSI_v1.ipynb
+++ b/documentSimilarity_LSI_v1.ipynb
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Latent semantic indexing:"
+    "## Latent Semantic Indexing:"
    ]
   },
   {
